# fastapi_mqtt_server

./: Makefile  docker-compose.yml  pyproject.toml
fastapi_mqtt_server/: main.py
