[tool.poetry]
name = "fastapi-mqtt-server"
version = "0.1.0"
description = ""
authors = ["massimobiagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mqtt_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
safety = "^2.3.5"
black = "^22.12.0"
isort = "^5.11.4"
bandit = "^1.7.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
